src/test/deca/context/invalid/cmp-icompatible.context
cmp-icompatible.deca:2:
